--- a/index.html
+++ b/index.html
@@ -15,9 +15,9 @@
            alt="MTN Logo" style="height:40px; vertical-align:middle;">
       <span>Bundle Shop</span>
     </div>
-     <div class="brand">
-      <img src="images/Prof.png" 
-           alt="MTN Logo" style="height:50px; vertical-align:middle;">
+    <div class="brand">
+      <img src="images/Logo vault.png" 
+           alt="MTN Logo" style="height:30px; vertical-align:middle;">
     
     </div>
   </header>
@@ -78,3 +78,4 @@
   <script src="script.js"></script>
 </body>
 </html>
+
